Fixed pesky navbar, also fixed spacing issue on contact page

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -57,7 +57,7 @@ $font-weights: (
 }
 
 .active{
-  display: block !important;
+  display: flex !important;
 }
 
 body{
